# databricks-dspy-forge

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  LICENSE  README.md  README_ARCHITECTURE.md  app.yaml  deploy.sh  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/components/: logic_templates.py  module_templates.py  registry.py  retriever_templates.py  signature_field.py
backend/app/core/: config.py  dspy_types.py  logging.py  templates.py
backend/app/deployment/: agent.py  runner.py
backend/app/models/: workflow.py
backend/app/services/: compiler_service.py  deployment_service.py  execution_service.py  validation_service.py  workflow_service.py
backend/app/storage/: base.py  databricks.py  factory.py  local.py
backend/app/utils/: workflow_utils.py
backend/workflows/: 7dc200fe-aaf0-41c9-a992-084cd50410c2.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ComponentSidebar.tsx  PlaygroundSidebar.tsx  Toast.tsx  ToastContainer.tsx  WorkflowBuilder.tsx  WorkflowList.tsx
frontend/src/types/: workflow.ts
src/dspy_forge/: main.py
src/dspy_forge/api/: routes.py
src/dspy_forge/components/: __init__.py  logic_templates.py  module_templates.py  registry.py  retriever_templates.py  signature_field.py  tool_templates.py
ui/: package-lock.json  package.json  tailwind.config.js
ui/public/: index.html
ui/src/: App.tsx  index.css
(+68 files in other folders)
