[project]
name = "dspy-forge"
version = "0.1.0"
description = "DSPy Program Builder"
readme = "README.md"
authors = [
    { name = "Kshitiz Sharma", email = "kshitizsharma38@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "mlflow>=3.4.0",
    "mlflow-skinny[databricks]>=3.4.0",
    "databricks-sdk>=0.68.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-ai-bridge>=0.8.0",
    "databricks-agents>=1.6.0",
    "aiofiles>=24.1.0",
    "networkx>=3.5",
    "dspy>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
dspy-forge = "dspy_forge.main:run"
